--- a/index.html
+++ b/index.html
@@ -60,22 +60,22 @@
             <div class="container">
                 <h2>Popular Topics</h2>
                 <div class="topics-grid">
-                    <a href="healthcare.html" class="topic-card">
+                    <a href="topics.healthcare.html" class="topic-card">
                         <div class="topic-icon">🏥</div>
                         <h3>Healthcare</h3>
                         <p>Medication reminders, finding doctors, and health information</p>
                     </a>
-                    <a href="technology.html" class="topic-card">
+                    <a href="topics.technology.html" class="topic-card">
                         <div class="topic-icon">📱</div>
                         <h3>Technology Help</h3>
                         <p>Using smartphones, computers, and staying connected online</p>
                     </a>
-                    <a href="retirement.html" class="topic-card">
+                    <a href="topics.retirement.html" class="topic-card">
                         <div class="topic-icon">💰</div>
                         <h3>Retirement</h3>
                         <p>Financial planning, benefits, and retirement living</p>
                     </a>
-                    <a href="family.html" class="topic-card">
+                    <a href="topics.family.html" class="topic-card">
                         <div class="topic-icon">👪</div>
                         <h3>Family</h3>
                         <p>Connecting with loved ones and family activities</p>
