--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <header>
         <div class="container">
             <div class="logo">
-                <h1>Boomer Ask</h1>
-                <p class="tagline">Your Friendly AI Assistant</p>
+                <h1>BoomerAsk</h1>
+                <p class="tagline">Your Friendly AI Assistant!</p>
             </div>
             <nav>
                 <ul>
